# SWARM_MARL_MINIPROJECT

./: README.md
ros2_ws/: frames_2025-03-17_07.42.27.gv
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/marl/lib/marl/: marl_agent  swarm_coordinator
ros2_ws/install/marl/share/marl/: package.dsv  package.ps1  package.sh  package.xml
ros2_ws/install/marl/share/marl/launch/: display_launch.py  display_launch_gazebo.py  hospital.launch.py  swarm.launch.py  view_hospital.launch.py  world_robot_launch.py
ros2_ws/install/marl/share/marl/urdf/: robot.urdf
ros2_ws/install/marl/share/marl/worlds/: swarm_world.sdf
ros2_ws/log/: latest_build
ros2_ws/src/marl/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/marl/launch/: display_launch.py  display_launch_gazebo.py  view_hospital.launch.py  world_robot_launch.py
ros2_ws/src/marl/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/marl/scripts/: agent.py  swarm_coord.py
ros2_ws/src/marl/urdf/: robot.urdf
ros2_ws/src/marl/worlds/: hospital.world
